# sandfs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: roadmap.md
sandfs/: __init__.py  adapters.py  cli.py  hooks.py  integrations.py  managers.py  nodes.py  path_utils.py  policies.py  providers.py  pyexec.py  search.py  shell.py  shell_parser.py  vfs.py
sandfs/shell/: __init__.py  common.py  core.py  host.py  registry.py
sandfs/shell/commands/: __init__.py  file_ops.py  host.py  meta.py  navigation.py  python_cmds.py  search.py  text.py
tests/: test_adapters.py  test_cli.py  test_find.py  test_head_tail.py  test_managers.py  test_policies.py  test_search_index.py  test_search_view.py  test_shell.py  test_shell_parser.py  test_snapshots.py  test_stat.py  test_vfs.py  test_visibility.py
