[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "sandfs"
version = "0.2.2"
description = "Composable virtual filesystem sandbox with a UNIX-like command surface for agents"
requires-python = ">=3.10"
authors = [
  { name = "sandfs contributors" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["virtual filesystem", "agents", "sandbox", "in-memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: System :: Filesystems",
  "Topic :: Software Development :: Libraries"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "mypy>=1.11",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://example.com/sandfs"
Repository = "https://example.com/sandfs.git"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
check_untyped_defs = true
disallow_incomplete_defs = true
files = ["sandfs"]
